fullSandbox11072023/force-app/main/default/objects/Business_Metrics__c/Business_Metrics__c.object-meta.xml
<CustomObject>
    <label>Business Metrics</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>