fullSandbox11072023/force-app/main/default/objects/Business_Metrics__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Surgical Disposables</fullName>
            </value>
            <value>
                <fullName>Surgical Instruments</fullName>
            </value>
            <value>
                <fullName>Alternate Care</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Interventional Capital</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>Interventional</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>Surgical Percuvance</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Commercial Operations</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>