fullSandbox11072023/force-app/main/default/objects/Business_Metrics__c/fields/Business_Unit_Key__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Key__c</fullName>
    <label>Business Unit Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>