fullSandbox11072023/force-app/main/default/objects/Business_Metrics__c/fields/Custom_URL__c.field-meta.xml
<CustomField>
    <fullName>Custom_URL__c</fullName>
    <label>Custom URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>