fullSandbox11072023/force-app/main/default/objects/Business_Metrics__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>if(
AND(
ISPICKVAL(Type__c, &quot;Custom URL&quot;),
NOT(ISBLANK(Custom_URL__c))
), Custom_URL__c,
if(
AND(
ISPICKVAL(Type__c, &quot;Report&quot;),
NOT(ISBLANK(Report_Id__c))
), &quot;/&quot; &amp;  Report_Id__c,
NULL
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>