fullSandbox11072023/force-app/main/default/objects/Business_Metrics__c/fields/Report_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Label_Name__c</fullName>
    <label>Report Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>