fullSandbox11072023/force-app/main/default/objects/Business_Metrics__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need Help?</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Leading Indicators</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
            <value>
                <fullName>Sales Reporting</fullName>
            </value>
            <value>
                <fullName>Open Orders</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Daily Sales</fullName>
            </value>
            <value>
                <fullName>Customer Service Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>