fullSandbox11072023/force-app/main/default/objects/Business_Metrics__c/fields/Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Order__c</fullName>
    <label>Sorting Order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>