fullSandbox11072023/force-app/main/default/objects/Business_Metrics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Sorting_Order__c</columns>
    <columns>Type__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Business_Unit_Key__c</columns>
    <columns>Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>Show All</label>
</ListView>